fix: c-sidebar-minimizer is visible on mobile devices

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -845,6 +845,9 @@
         background-image: $sidebar-dark-minimizer-hover-indicator;
       }
     }
+    @include media-breakpoint-down(xs) {
+      display: none;
+    }
   }
   &.#{$prefix}sidebar-minimized {
     background-color: darken($sidebar-dark-bg, 5%);
